fix team site on mobile agian

--- a/src/pages/Team.scss
+++ b/src/pages/Team.scss
@@ -16,7 +16,6 @@
         }
     }
 
-
     h3 {
         font-size: 32px;
     }
@@ -185,6 +184,16 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                }
+
+                @media (max-width: 767px) {
+                    .name {
+                        font-size: 21px;
+                    }
+
+                    .society {
+                        font-size: 20px;
+                    }
                 }
             }
         }
